<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android" xmlns:app="http://schemas.android.com/apk/res-auto" android:layout_width="match_parent" android:layout_height="match_parent" android:background="@color/zfm_background" android:orientation="vertical">
    <include layout="@layout/view_toolbar" />
    <com.google.android.material.textfield.TextInputLayout style="@style/Widget.Zfm.TextInput" android:layout_width="match_parent" android:layout_height="wrap_content" android:layout_marginStart="@dimen/zfm_page_padding" android:layout_marginTop="12dp" android:layout_marginEnd="@dimen/zfm_page_padding" android:hint="@string/hint_search" app:startIconDrawable="@drawable/ic_search_24">
        <com.google.android.material.textfield.TextInputEditText android:id="@+id/searchInput" android:layout_width="match_parent" android:layout_height="wrap_content" android:imeOptions="actionSearch" android:inputType="text" android:maxLines="1" />
    </com.google.android.material.textfield.TextInputLayout>
    <LinearLayout android:layout_width="match_parent" android:layout_height="wrap_content" android:gravity="center_vertical" android:orientation="horizontal" android:paddingStart="@dimen/zfm_page_padding" android:paddingEnd="@dimen/zfm_page_padding">
        <com.google.android.material.checkbox.MaterialCheckBox android:id="@+id/showSystem" android:layout_width="wrap_content" android:layout_height="wrap_content" android:textAppearance="@style/TextAppearance.Zfm.Body" android:text="@string/cb_show_system" />
        <TextView android:id="@+id/countText" android:layout_width="0dp" android:layout_height="wrap_content" android:layout_weight="1" android:gravity="end" android:textAppearance="@style/TextAppearance.Zfm.Helper" />
    </LinearLayout>
    <FrameLayout android:layout_width="match_parent" android:layout_height="0dp" android:layout_weight="1">
        <androidx.recyclerview.widget.RecyclerView android:id="@+id/appList" android:layout_width="match_parent" android:layout_height="match_parent" android:clipToPadding="false" android:paddingBottom="12dp" />
        <TextView android:id="@+id/emptyText" android:layout_width="match_parent" android:layout_height="wrap_content" android:layout_gravity="center" android:gravity="center" android:padding="24dp" android:text="@string/empty_apps" android:textAppearance="@style/TextAppearance.Zfm.Body" android:visibility="gone" />
    </FrameLayout>
</LinearLayout>